updated 'add user' functionality, now can add roles to new users

--- a/jbugs-client/src/main/webapp/users.xhtml
+++ b/jbugs-client/src/main/webapp/users.xhtml
@@ -13,7 +13,7 @@
 		<h3>Create New User</h3>
 		<h:messages></h:messages>
 		<h:form id="newUserForm">
-			<p:panelGrid columns="3">
+			<p:panelGrid columns="3" style="width:400px;">
 				<p:outputLabel for="firstName" value="First Name:" />
 				<p:inputText id="firstName"
 					value="#{userManagementBean.newUser.firstName}" />
@@ -30,11 +30,26 @@
 				<p:outputLabel for="email" value="Email:" />
 				<p:inputText id="email" value="#{userManagementBean.newUser.email}" />
 				<br></br>
+				<p:outputLabel value="User Roles:" />
+				<p:dataTable id="checkboxRoles" value="#{userManagementBean.allRoles}"
+				 var="role"  rowKey="#{role.roleName}"  selection="#{userManagementBean.selectedRoles}" >
+
+					<p:column selectionMode="multiple"  
+						style="width:16px;text-align:center"/>
+					<p:column headerText="Role Name" >
+						<h:outputText value="#{role.roleName}" />
+					</p:column>	
+				</p:dataTable>
+				</p:panelGrid>
+				
+				<br></br>
 				<p:commandButton value="Save User"
 					action="#{userManagementBean.doCreateUser}" ajax='false' />
 
-			</p:panelGrid>
+			
 		</h:form>
+		
+
 
 		<h:form value="usersForm">
 			<h:dataTable value="#{userManagementBean.allUsers}" var="user"
@@ -43,43 +58,39 @@
 					<f:facet name="header">Username</f:facet>
 					<h:outputText value="#{user.username}"></h:outputText>
 
-			</h:column>
-            <h:column>
-                <f:facet name="header">First Name</f:facet>
-                <h:outputText value="#{user.firstName}"
-                              rendered="#{!(user.equals(userManagementBean.editedUser))}"/>
-                <h:inputText value="#{userManagementBean.editedUser.firstName}"
-                             rendered="#{user.equals(userManagementBean.editedUser)}"
-                            />
+				</h:column>
+				<h:column>
+					<f:facet name="header">First Name</f:facet>
+					<h:outputText value="#{user.firstName}"
+						rendered="#{!(user.equals(userManagementBean.editedUser))}" />
+					<h:inputText value="#{userManagementBean.editedUser.firstName}"
+						rendered="#{user.equals(userManagementBean.editedUser)}" />
 
 				</h:column>
 
-            <h:column>
-                <f:facet name="header">Last name</f:facet>
-                <h:outputText value="#{user.lastName}"
-                              rendered="#{!(user.equals(userManagementBean.editedUser))}"/>
-                <h:inputText value="#{userManagementBean.editedUser.lastName}"
-                             rendered="#{user.equals(userManagementBean.editedUser)}"
-                           />
-            </h:column>
+				<h:column>
+					<f:facet name="header">Last name</f:facet>
+					<h:outputText value="#{user.lastName}"
+						rendered="#{!(user.equals(userManagementBean.editedUser))}" />
+					<h:inputText value="#{userManagementBean.editedUser.lastName}"
+						rendered="#{user.equals(userManagementBean.editedUser)}" />
+				</h:column>
 
-			<h:column>
-				<f:facet name="header">Phone Number</f:facet>
-				<h:outputText value="#{user.phoneNumber}"
-                              rendered="#{!(user.equals(userManagementBean.editedUser))}"/>
-                <h:inputText value="#{userManagementBean.editedUser.phoneNumber}"
-                             rendered="#{user.equals(userManagementBean.editedUser)}"
-                            />
-			</h:column>
+				<h:column>
+					<f:facet name="header">Phone Number</f:facet>
+					<h:outputText value="#{user.phoneNumber}"
+						rendered="#{!(user.equals(userManagementBean.editedUser))}" />
+					<h:inputText value="#{userManagementBean.editedUser.phoneNumber}"
+						rendered="#{user.equals(userManagementBean.editedUser)}" />
+				</h:column>
 
-			<h:column>
-				<f:facet name="header">Email</f:facet>
-				<h:outputText value="#{user.email}"
-                              rendered="#{!(user.equals(userManagementBean.editedUser))}"/>
-                <h:inputText value="#{userManagementBean.editedUser.email}"
-                             rendered="#{user.equals(userManagementBean.editedUser)}"
-                           />
-			</h:column>
+				<h:column>
+					<f:facet name="header">Email</f:facet>
+					<h:outputText value="#{user.email}"
+						rendered="#{!(user.equals(userManagementBean.editedUser))}" />
+					<h:inputText value="#{userManagementBean.editedUser.email}"
+						rendered="#{user.equals(userManagementBean.editedUser)}" />
+				</h:column>
 
 				<h:column>
 					<f:facet name="header">Password</f:facet>
@@ -103,15 +114,15 @@
 						rendered="#{user.active}"></h:commandLink>
 				</h:column>
 
-			<h:column>
-				<f:facet name="header">Edit</f:facet>
-				<h:commandButton value="Edit"
-								action="#{userManagementBean.setEditedUser(user)}"
-								rendered="#{not (user.equals(userManagementBean.editedUser))}" />
-				<h:commandButton value="Save" 
-								 action="#{userManagementBean.doSaveEditedUser}"
-								 rendered="#{user.equals(userManagementBean.editedUser)}" />
-			</h:column>
+				<h:column>
+					<f:facet name="header">Edit</f:facet>
+					<h:commandButton value="Edit"
+						action="#{userManagementBean.setEditedUser(user)}"
+						rendered="#{not (user.equals(userManagementBean.editedUser))}" />
+					<h:commandButton value="Save"
+						action="#{userManagementBean.doSaveEditedUser}"
+						rendered="#{user.equals(userManagementBean.editedUser)}" />
+				</h:column>
 			</h:dataTable>
 		</h:form>
 	</f:view>
