--- a/jbugs-client/src/main/webapp/users.xhtml
+++ b/jbugs-client/src/main/webapp/users.xhtml
@@ -49,61 +49,101 @@
 			
 		</h:form>
 		
+<h3>Existing Users</h3>
+		
+			<h:form id="form">
+		<p:growl id="msgs" showDetail="true" />
 
+		<p:dataTable id="usersss" var="user"
+			value="#{userManagementBean.users}" editable="true">
+<!-- 			style="margin-bottom:20px" rows="25" paginator="true" -->
+<!-- 			paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}" -->
+<!-- 			rowsPerPageTemplate="10,25,50" -->
+			<f:facet name="header"> 
+           Row Editing
+       </f:facet>
 
-		<h:form value="usersForm">
-			<h:dataTable value="#{userManagementBean.allUsers}" var="user"
-				id="usersTable">
-				<h:column>
-					<f:facet name="header">Username</f:facet>
-					<h:outputText value="#{user.username}"></h:outputText>
+			<p:ajax event="rowEdit" listener="#{userManagementBean.onRowEdit}"
+				update=":form:msgs" />
+			<p:ajax event="rowEditCancel"
+				listener="#{userManagementBean.onRowCancel}" update=":form:msgs" />
 
-				</h:column>
-				<h:column>
-					<f:facet name="header">First Name</f:facet>
-					<h:outputText value="#{user.firstName}"
-						rendered="#{!(user.equals(userManagementBean.editedUser))}" />
-					<h:inputText value="#{userManagementBean.editedUser.firstName}"
-						rendered="#{user.equals(userManagementBean.editedUser)}" />
+			<p:column headerText="Username">
+				<h:outputText value="#{user.username}" />
+			</p:column>
 
-				</h:column>
+			<p:column headerText="First Name" 
+			filterBy="#{user.firstName}" footerText="contains" filterMatchMode="contains">
+				<p:cellEditor>
+					<f:facet name="output">
+						<h:outputText value="#{user.firstName}" />
+					</f:facet>
+					<f:facet name="input">
+						<p:inputText id="modelInput" value="#{user.firstName}"
+							style="width:100%">
+							<f:validateRequired />
+						</p:inputText>
+					</f:facet>
+				</p:cellEditor>
+			</p:column>
 
-				<h:column>
-					<f:facet name="header">Last name</f:facet>
-					<h:outputText value="#{user.lastName}"
-						rendered="#{!(user.equals(userManagementBean.editedUser))}" />
-					<h:inputText value="#{userManagementBean.editedUser.lastName}"
-						rendered="#{user.equals(userManagementBean.editedUser)}" />
-				</h:column>
+			<p:column headerText="Last Name">
+				<p:cellEditor>
+					<f:facet name="output">
+						<h:outputText value="#{user.lastName}" />
+					</f:facet>
+					<f:facet name="input">
+						<p:inputText value="#{user.lastName}" style="width:100%">
+							<f:validateRequired />
+						</p:inputText>
+					</f:facet>
+				</p:cellEditor>
+			</p:column>
 
-				<h:column>
-					<f:facet name="header">Phone Number</f:facet>
-					<h:outputText value="#{user.phoneNumber}"
-						rendered="#{!(user.equals(userManagementBean.editedUser))}" />
-					<h:inputText value="#{userManagementBean.editedUser.phoneNumber}"
-						rendered="#{user.equals(userManagementBean.editedUser)}" />
-				</h:column>
+			<p:column headerText="Phone Number">
+				<p:cellEditor>
+					<f:facet name="output">
+						<h:outputText value="#{user.phoneNumber}" />
+					</f:facet>
+					<f:facet name="input">
+						<p:inputText value="#{user.phoneNumber}" style="width:100%">
+						<f:validateRegex pattern="(40|49)\d{9}"></f:validateRegex> 
+						</p:inputText>
+					</f:facet>
+				</p:cellEditor>
+			</p:column>
 
-				<h:column>
-					<f:facet name="header">Email</f:facet>
-					<h:outputText value="#{user.email}"
-						rendered="#{!(user.equals(userManagementBean.editedUser))}" />
-					<h:inputText value="#{userManagementBean.editedUser.email}"
-						rendered="#{user.equals(userManagementBean.editedUser)}" />
-				</h:column>
+			<p:column headerText="E-mail">
+				<p:cellEditor>
+					<f:facet name="output">
+						<h:outputText value="#{user.email}" />
+					</f:facet>
+					<f:facet name="input">
+						<p:inputText value="#{user.email}" style="width:100%">
+							<f:validateRegex pattern="^[a-zA-Z0-9._%+-]+@msggroup\.com"></f:validateRegex>
+						</p:inputText>
+					</f:facet>
+				</p:cellEditor>
+			</p:column>
+			
+			<p:column headerText="Password">
+				<p:cellEditor>
+					<f:facet name="output">
+						<h:outputText value="#{user.password}" />
+					</f:facet>
+					<f:facet name="input">
+						<p:inputText value="#{user.password}" style="width:100%">
+						</p:inputText>
+					</f:facet>
+				</p:cellEditor>
+			</p:column>
 
-				<h:column>
-					<f:facet name="header">Password</f:facet>
-					<h:outputText value="#{user.password}"></h:outputText>
-				</h:column>
-
-				<h:column>
-					<f:facet name="header"> Status</f:facet>
-					<h:outputText value="active" rendered="#{user.active}"></h:outputText>
-					<h:outputText value="inactive" rendered="#{not user.active}"></h:outputText>
-				</h:column>
-
-				<h:column>
+			<p:column>
+				<f:facet name="header">Status</f:facet>
+				<h:outputText value="active" rendered="#{user.active}" />
+				<h:outputText value="inactive" rendered="#{!user.active}" />
+			</p:column>
+			<p:column>
 					<f:facet name="header">Activate/Deactivate</f:facet>
 					<h:commandLink value="activate"
 						action="#{userManagementBean.activateUser(user.username)}"
@@ -112,94 +152,16 @@
 					<h:commandLink value="deactivate"
 						action="#{userManagementBean.deactivateUser(user.username)}"
 						rendered="#{user.active}"></h:commandLink>
-				</h:column>
+				</p:column>
 
-				<h:column>
-					<f:facet name="header">Edit</f:facet>
-					<h:commandButton value="Edit"
-						action="#{userManagementBean.setEditedUser(user)}"
-						rendered="#{not (user.equals(userManagementBean.editedUser))}" />
-					<h:commandButton value="Save"
-						action="#{userManagementBean.doSaveEditedUser}"
-						rendered="#{user.equals(userManagementBean.editedUser)}" />
-				</h:column>
-			</h:dataTable>
-		</h:form>
-	</f:view>
+			<p:column style="width:32px">
+				<p:rowEditor />
+			</p:column>
+		</p:dataTable>
 
-	<h:panelGrid columns="1" cellpadding="5"
-		value="#{userManagementBean.allUsers}" var="user">
-		<p:inputText value="#{user.firstName}" />
-		<p:commandButton value="Basic" type="button"
-			onclick="PF('dlg1').show();" />
-
-		<p:commandButton value="Modal" type="button"
-			onclick="PF('dlg2').show();" />
-
-		<p:commandButton value="Effects" type="button"
-			onclick="PF('dlg3').show();" />
-	</h:panelGrid>
-
-	<p:dialog header="Basic Dialog" widgetVar="dlg1" minHeight="40">
-		<h:outputText value="Resistance to PrimeFaces is futile!" />
-	</p:dialog>
-
-	<p:dialog header="Modal Dialog" widgetVar="dlg2" modal="true"
-		height="100">
-		<h:outputText value="This is a Modal Dialog." />
-	</p:dialog>
-
-	<p:dialog header="Effects" widgetVar="dlg3" showEffect="explode"
-		hideEffect="bounce" height="100">
-		<h:outputText value="This dialog has nice effects." />
-	</p:dialog>
-	<h:form>
-		<h:commandButton action="#{loginBean.doLogout}"
-			onClick="window.location.reload();"
-			value="#{msg['logout.buttonName']}"></h:commandButton>
 	</h:form>
+	
+	</f:view>
 </h:body>
 
-
-<h:form id="formEditable">
-	<p:growl id="msgs" showDetail="true" />
-
-	<p:dataTable id="cars2" var="user"
-		value="#{userManagementBean.allUsers}" editable="true" editMode="cell"
-		widgetVar="cellCars">
-
-
-		<p:ajax event="cellEdit" listener="#{userManagementBean.onCellEdit}"
-			update=":formEditable:msgs" />
-
-
-
-		<p:column headerText="First Name">
-			<p:cellEditor>
-				<f:facet name="output">
-					<h:outputText value="#{user.firstName}" />
-				</f:facet>
-				<f:facet name="input">
-					<p:inputText value="#{user.firstName}" style="width:96%"
-						label="Year" />
-				</f:facet>
-			</p:cellEditor>
-		</p:column>
-
-		<p:column headerText="Last Name">
-			<p:cellEditor>
-				<f:facet name="output">
-					<h:outputText value="#{user.lastName}" />
-				</f:facet>
-				<f:facet name="input">
-					<p:inputText value="#{user.lastName}" style="width:96%"
-						label="Year" />
-				</f:facet>
-			</p:cellEditor>
-		</p:column>
-
-	</p:dataTable>
-
-
-</h:form>
 </html>
