--- a/jbugs-client/src/main/webapp/login.xhtml
+++ b/jbugs-client/src/main/webapp/login.xhtml
@@ -41,7 +41,7 @@
 			<!--  <div class="g-recaptcha" data-sitekey="6Ld3FysUAAAAADOI7AHQQkDNI-2LHLX4yVIC45kG"></div> -->
 
 			<p:captcha id="captcha" align="left"></p:captcha>
-			<br> <h:commandButton action="#{loginBean.doLogin}"
+			<br> <h:commandButton action="#{loginBean.doLoginWithCaptcha}"
 					value="#{msg['login.buttonName']}">
 				</h:commandButton> </br>
 		</p:panelGrid>
